# TRAFT

./: .gitmodules  CMakeLists.txt  COPYING  CmakeLists.txt  README.md
cmake/: CMakeLists.txt  gtest.cmake
src/: CMakeLists.txt  Config.cc  Config.hpp  Context.hpp  Dout.hpp  Entry.hpp  Log.cc  Log.hpp  PrebufferedStream.cc  PrebufferedStream.hpp  Thread.cc  Thread.hpp  Timer.cc  Timer.hpp  Util.cc  Util.hpp  compat.h  compat.hpp  config.cc  config.hpp  dout.hpp  entry.hpp  log.cc  log.hpp  on_exit.hpp  signal.cc  signal.hpp  traft.cc  util.cc
src/client/: client.cc
src/protos/: raft.proto
test/: CMakeLists.txt  test_log.cc
